--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 							<li><a href="https://linkedin.com/in/zamir-lalji-b1021b1b2" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkendIn</span></a></li>
 							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 							<li><a href="https://twitter.com/zamir_lalji#" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-							<li><a href="mailto:zamirlal15@gmail.com" class="fa fa-envelope" aria-hidden="true" target="_blank"></a></li>
-						</ul>
 					</nav>
 
 				<!-- Main -->
@@ -58,7 +56,9 @@
 							<a href="Projects.html" target="_blank"><h3>Projects</h3></a>
 								<p style="text-align:center;">Links to all my projects that I have created. Many more to come.</p>
 							</header>
-						<h4>Technologies/Frameworks</h4>
+							<article class="post featured">
+								<header class="major">
+							<h4>Technologies/Frameworks</h4>
 							<p style="text-align:center;">These are the following Technologies and Frameworks that I have experience in below:</p>
 							<ul class="icons">
                 				<li><img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="Mongodb" title="Mongodb"><p>Mongodb</p></li>
@@ -95,7 +95,7 @@
 
 						<!-- Footer -->
 						<footer class="text-center">
-  							<a href="#"><button type="button" class="block">Back to Top</button></a>
+  							<a href="index.html"><button type="button" class="block">Back to Top</button></a>
 						</footer>
 					</div>
 
