--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</header>
 							<article class="post featured">
 								<header class="major">
-							<h4>Technologies/Frameworks</h4>
+							<h4 style="margin: 10px;">Technologies/Frameworks</h4>
 							<p style="text-align:center;">These are the following Technologies and Frameworks that I have experience in below:</p>
 							<ul class="icons">
                 				<li><img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="Mongodb" title="Mongodb"><p>MongoDB</p></li>
