--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h4>Contact Me</h4>
 						  <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xqkwqwzg" method="post">
     							<fieldset id="fs-frm-inputs">
-      								<label for="full-name">Full Name</label>
+      								<label for="full-name">Name</label>
      	 							<input type="text" name="name" id="full-name" placeholder="John Doe" required="">
       								<label for="email-address">Email Address</label>
       								<input type="email" name="_replyto" id="email-address" placeholder="email@domain.com" required="">
