--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 				<li><img src="https://img.icons8.com/color/48/000000/nodejs.png" alt="nodejs" title="nodejs"><p>Node.js</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="mysql" title="mysql"><p>MySQL</p></li>
 						<li><img src="https://img.icons8.com/ios-filled/48/000000/qt.png" alt="qtdesigner" title="qtdesigner"><p>QT Designer</p></li>
+						<li><img src="https://img.icons8.com/color/48/000000/css3.png" alt="css3" title="css3"><p>CSS3</p></li>
             				</ul>
 							</header>
 							</article>
