--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 				<li><img src="https://img.icons8.com/color/48/000000/javascript.png" alt="Javascript" title="Javascript"><p>JavaScript</p></li>
                 				<li><img src="https://img.icons8.com/material-outlined/48/000000/github.png" alt="GitHub" title="GitHub"><p>GitHub</p></li>
                 				<li><img src="https://img.icons8.com/material-outlined/48/000000/react-native.png" alt="React Native" title="React Native"><p>React Native</p></li>
-                				<li><img src="https://img.icons8.com/material-outlined/48/000000/html-5.png" alt="HTML-5" title="HTML-5"><p>HTML5</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/html-5--v1.png"" alt="HTML-5" title="HTML-5"><p>HTML5</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/python.png" alt="Python" title="Python"><p>Python</p></li>
                 				<li><img src="https://img.icons8.com/fluent/48/000000/maria-db.png" alt="Maria-db" title="Maria-db"><p>MariaDB</p></li>
                 				<li><img src="https://img.icons8.com/ios-filled/48/000000/linux.png" alt="Linux" title="Linux"><p>Linux</p></li>
