--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       								<textarea rows="5" name="message" id="message" placeholder="Leave a Message" required=""></textarea>
       								<input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
     							</fieldset>
-    							<input type="submit" value="Submit">
+    							<input type="submit" value="Send Message">
   							</form>
 						</article>
 
